--- a/housemate-pro/src/App.css
+++ b/housemate-pro/src/App.css
@@ -44,14 +44,14 @@ li {
 .floor-plan img {
   max-width: 100%;
   height: auto;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-radius: 5px;
 }
 
 .members {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  justify-content: left;
   margin-top: 20px;
 }
 
@@ -67,6 +67,12 @@ li {
 
 .member-photo:hover {
   border-color: #2892a7;
+}
+
+.member-name {
+  margin-top: 5px;
+  font-size: 14px;
+  text-align: center;
 }
 
 .add-member-button {
