--- a/housemate-pro/src/components/AddMemberForm.scss
+++ b/housemate-pro/src/components/AddMemberForm.scss
@@ -17,6 +17,20 @@
     cursor: pointer;
   }
 
+  .add-member-photo {
+    width: 50px;
+    height: 50px;
+    margin: 0 10px;
+    cursor: pointer;
+    border: 2px solid transparent;
+    border-radius: 50%;
+    transition: border-color 0.3s;
+  }
+
+  .add-member-photo:hover {
+    border-color: #2892a7;
+  }
+
   form {
     div {
       margin-bottom: 15px;
