--- a/housemate-pro/src/App.css
+++ b/housemate-pro/src/App.css
@@ -19,6 +19,7 @@ button:hover {
 ul {
   list-style: none;
   padding: 0;
+  list-style-type: none
 }
 
 li {
@@ -26,6 +27,7 @@ li {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
+  list-style-type: none
 }
 
 .main-content {
@@ -98,4 +100,7 @@ li {
   flex: 1;
   margin-left: 20px;
   text-align: left;
+  list-style-type: none
 }
+
+
